Fix missing gap at bottom of lyrics

--- a/raphson_mp/static/css/player.css
+++ b/raphson_mp/static/css/player.css
@@ -4,7 +4,7 @@
 
 .sidebars {
     width: 100%;
-    height: 100%;
+    min-height: 100%;
     display: grid;
     gap: var(--gap);
     padding: var(--gap);
